my-react-app/api/codeDebugParser.py
# Generated from codeDebug.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class codeDebugParser ( Parser ):

    grammarFileName = "codeDebug.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'return'", "'const'", "'var'", "'let'", 
                     "'function'", "'export default'", "'useEffect'", "'useState'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "'='", 
                     "'''", "'\u0022'", "'<'", "'>'", "'/'", "';'" ]

    symbolicNames = [ "<INVALID>", "RETURN", "CONST", "VAR", "LET", "FUNCTION", 
                      "EXPORT", "USE_EFFECT", "USE_STATE", "LEFT_PARENTHESIS", 
                      "RIGHT_PARENTHESIS", "LEFT_BRACE", "RIGHT_BRACE", 
                      "LEFT_SQUARE_BRACKET", "RIGHT_SQUARE_BRACKET", "COMMA", 
                      "EQUAL", "SINGLE_QUOTE", "DOUBLE_QUOTE", "LEFT_ANGLE_BRACKET", 
                      "RIGHT_ANGLE_BRACKET", "SLASH", "SEMICOLON", "IDENTIFIER_UPPERCASE", 
                      "IDENTIFIER_LOWERCASE", "NUMBER", "WS" ]

    RULE_program = 0
    RULE_main_structure = 1
    RULE_parameter_list = 2
    RULE_function_declaration = 3
    RULE_body_function = 4
    RULE_content = 5
    RULE_return_statement = 6
    RULE_variableTypes = 7
    RULE_stateSetter = 8
    RULE_statePair = 9
    RULE_initialValue = 10
    RULE_valueForInitialization = 11
    RULE_array = 12
    RULE_numberArray = 13
    RULE_stringArray = 14
    RULE_arrayValue = 15
    RULE_stringValue = 16
    RULE_identifierValue = 17
    RULE_element = 18
    RULE_emptyFragment = 19
    RULE_openTag = 20
    RULE_closeTag = 21
    RULE_elementContent = 22
    RULE_valueIndicator = 23

    ruleNames =  [ "program", "main_structure", "parameter_list", "function_declaration", 
                   "body_function", "content", "return_statement", "variableTypes", 
                   "stateSetter", "statePair", "initialValue", "valueForInitialization", 
                   "array", "numberArray", "stringArray", "arrayValue", 
                   "stringValue", "identifierValue", "element", "emptyFragment", 
                   "openTag", "closeTag", "elementContent", "valueIndicator" ]

    EOF = Token.EOF
    RETURN=1
    CONST=2
    VAR=3
    LET=4
    FUNCTION=5
    EXPORT=6
    USE_EFFECT=7
    USE_STATE=8
    LEFT_PARENTHESIS=9
    RIGHT_PARENTHESIS=10
    LEFT_BRACE=11
    RIGHT_BRACE=12
    LEFT_SQUARE_BRACKET=13
    RIGHT_SQUARE_BRACKET=14
    COMMA=15
    EQUAL=16
    SINGLE_QUOTE=17
    DOUBLE_QUOTE=18
    LEFT_ANGLE_BRACKET=19
    RIGHT_ANGLE_BRACKET=20
    SLASH=21
    SEMICOLON=22
    IDENTIFIER_UPPERCASE=23
    IDENTIFIER_LOWERCASE=24
    NUMBER=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main_structure(self):
            return self.getTypedRuleContext(codeDebugParser.Main_structureContext,0)


        def getRuleIndex(self):
            return codeDebugParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = codeDebugParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.main_structure()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_structureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_declaration(self):
            return self.getTypedRuleContext(codeDebugParser.Function_declarationContext,0)


        def parameter_list(self):
            return self.getTypedRuleContext(codeDebugParser.Parameter_listContext,0)


        def body_function(self):
            return self.getTypedRuleContext(codeDebugParser.Body_functionContext,0)


        def identifierValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(codeDebugParser.IdentifierValueContext)
            else:
                return self.getTypedRuleContext(codeDebugParser.IdentifierValueContext,i)


        def getRuleIndex(self):
            return codeDebugParser.RULE_main_structure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_structure" ):
                listener.enterMain_structure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_structure" ):
                listener.exitMain_structure(self)




    def main_structure(self):

        localctx = codeDebugParser.Main_structureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main_structure)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.function_declaration()
            self.state = 52 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 51
                self.identifierValue()
                self.state = 54 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==codeDebugParser.IDENTIFIER_UPPERCASE or _la==codeDebugParser.IDENTIFIER_LOWERCASE):
                    break

            self.state = 56
            self.parameter_list()
            self.state = 57
            self.body_function()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PARENTHESIS(self):
            return self.getToken(codeDebugParser.LEFT_PARENTHESIS, 0)

        def RIGHT_PARENTHESIS(self):
            return self.getToken(codeDebugParser.RIGHT_PARENTHESIS, 0)

        def identifierValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(codeDebugParser.IdentifierValueContext)
            else:
                return self.getTypedRuleContext(codeDebugParser.IdentifierValueContext,i)


        def LEFT_BRACE(self):
            return self.getToken(codeDebugParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(codeDebugParser.RIGHT_BRACE, 0)

        def getRuleIndex(self):
            return codeDebugParser.RULE_parameter_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_list" ):
                listener.enterParameter_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_list" ):
                listener.exitParameter_list(self)




    def parameter_list(self):

        localctx = codeDebugParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.match(codeDebugParser.LEFT_PARENTHESIS)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==codeDebugParser.IDENTIFIER_UPPERCASE or _la==codeDebugParser.IDENTIFIER_LOWERCASE:
                    self.state = 60
                    self.identifierValue()
                    self.state = 65
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 66
                self.match(codeDebugParser.RIGHT_PARENTHESIS)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.match(codeDebugParser.LEFT_PARENTHESIS)
                self.state = 68
                self.match(codeDebugParser.LEFT_BRACE)
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==codeDebugParser.IDENTIFIER_UPPERCASE or _la==codeDebugParser.IDENTIFIER_LOWERCASE:
                    self.state = 69
                    self.identifierValue()
                    self.state = 74
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 75
                self.match(codeDebugParser.RIGHT_BRACE)
                self.state = 76
                self.match(codeDebugParser.RIGHT_PARENTHESIS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(codeDebugParser.FUNCTION, 0)

        def EXPORT(self):
            return self.getToken(codeDebugParser.EXPORT, 0)

        def getRuleIndex(self):
            return codeDebugParser.RULE_function_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declaration" ):
                listener.enterFunction_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declaration" ):
                listener.exitFunction_declaration(self)




    def function_declaration(self):

        localctx = codeDebugParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_declaration)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [codeDebugParser.FUNCTION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.match(codeDebugParser.FUNCTION)
                pass
            elif token in [codeDebugParser.EXPORT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.match(codeDebugParser.EXPORT)
                self.state = 81
                self.match(codeDebugParser.FUNCTION)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_functionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_BRACE(self):
            return self.getToken(codeDebugParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(codeDebugParser.RIGHT_BRACE, 0)

        def content(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(codeDebugParser.ContentContext)
            else:
                return self.getTypedRuleContext(codeDebugParser.ContentContext,i)


        def getRuleIndex(self):
            return codeDebugParser.RULE_body_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody_function" ):
                listener.enterBody_function(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody_function" ):
                listener.exitBody_function(self)




    def body_function(self):

        localctx = codeDebugParser.Body_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_body_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(codeDebugParser.LEFT_BRACE)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << codeDebugParser.RETURN) | (1 << codeDebugParser.CONST) | (1 << codeDebugParser.VAR) | (1 << codeDebugParser.LET))) != 0):
                self.state = 85
                self.content()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 91
            self.match(codeDebugParser.RIGHT_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stateSetter(self):
            return self.getTypedRuleContext(codeDebugParser.StateSetterContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(codeDebugParser.Return_statementContext,0)


        def getRuleIndex(self):
            return codeDebugParser.RULE_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContent" ):
                listener.enterContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContent" ):
                listener.exitContent(self)




    def content(self):

        localctx = codeDebugParser.ContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_content)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [codeDebugParser.CONST, codeDebugParser.VAR, codeDebugParser.LET]:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.stateSetter()
                pass
            elif token in [codeDebugParser.RETURN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.return_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(codeDebugParser.RETURN, 0)

        def LEFT_PARENTHESIS(self):
            return self.getToken(codeDebugParser.LEFT_PARENTHESIS, 0)

        def element(self):
            return self.getTypedRuleContext(codeDebugParser.ElementContext,0)


        def RIGHT_PARENTHESIS(self):
            return self.getToken(codeDebugParser.RIGHT_PARENTHESIS, 0)

        def getRuleIndex(self):
            return codeDebugParser.RULE_return_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_statement" ):
                listener.enterReturn_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_statement" ):
                listener.exitReturn_statement(self)




    def return_statement(self):

        localctx = codeDebugParser.Return_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_return_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(codeDebugParser.RETURN)
            self.state = 98
            self.match(codeDebugParser.LEFT_PARENTHESIS)
            self.state = 99
            self.element()
            self.state = 100
            self.match(codeDebugParser.RIGHT_PARENTHESIS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableTypesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(codeDebugParser.CONST, 0)

        def VAR(self):
            return self.getToken(codeDebugParser.VAR, 0)

        def LET(self):
            return self.getToken(codeDebugParser.LET, 0)

        def getRuleIndex(self):
            return codeDebugParser.RULE_variableTypes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableTypes" ):
                listener.enterVariableTypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableTypes" ):
                listener.exitVariableTypes(self)




    def variableTypes(self):

        localctx = codeDebugParser.VariableTypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variableTypes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << codeDebugParser.CONST) | (1 << codeDebugParser.VAR) | (1 << codeDebugParser.LET))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateSetterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableTypes(self):
            return self.getTypedRuleContext(codeDebugParser.VariableTypesContext,0)


        def statePair(self):
            return self.getTypedRuleContext(codeDebugParser.StatePairContext,0)


        def EQUAL(self):
            return self.getToken(codeDebugParser.EQUAL, 0)

        def USE_STATE(self):
            return self.getToken(codeDebugParser.USE_STATE, 0)

        def initialValue(self):
            return self.getTypedRuleContext(codeDebugParser.InitialValueContext,0)


        def SEMICOLON(self):
            return self.getToken(codeDebugParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return codeDebugParser.RULE_stateSetter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateSetter" ):
                listener.enterStateSetter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStateSetter" ):
                listener.exitStateSetter(self)




    def stateSetter(self):

        localctx = codeDebugParser.StateSetterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_stateSetter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.variableTypes()
            self.state = 105
            self.statePair()
            self.state = 106
            self.match(codeDebugParser.EQUAL)
            self.state = 107
            self.match(codeDebugParser.USE_STATE)
            self.state = 108
            self.initialValue()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==codeDebugParser.SEMICOLON:
                self.state = 109
                self.match(codeDebugParser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatePairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_SQUARE_BRACKET(self):
            return self.getToken(codeDebugParser.LEFT_SQUARE_BRACKET, 0)

        def COMMA(self):
            return self.getToken(codeDebugParser.COMMA, 0)

        def RIGHT_SQUARE_BRACKET(self):
            return self.getToken(codeDebugParser.RIGHT_SQUARE_BRACKET, 0)

        def identifierValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(codeDebugParser.IdentifierValueContext)
            else:
                return self.getTypedRuleContext(codeDebugParser.IdentifierValueContext,i)


        def getRuleIndex(self):
            return codeDebugParser.RULE_statePair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatePair" ):
                listener.enterStatePair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatePair" ):
                listener.exitStatePair(self)




    def statePair(self):

        localctx = codeDebugParser.StatePairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statePair)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(codeDebugParser.LEFT_SQUARE_BRACKET)
            self.state = 114 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 113
                self.identifierValue()
                self.state = 116 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==codeDebugParser.IDENTIFIER_UPPERCASE or _la==codeDebugParser.IDENTIFIER_LOWERCASE):
                    break

            self.state = 118
            self.match(codeDebugParser.COMMA)
            self.state = 120 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 119
                self.identifierValue()
                self.state = 122 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==codeDebugParser.IDENTIFIER_UPPERCASE or _la==codeDebugParser.IDENTIFIER_LOWERCASE):
                    break

            self.state = 124
            self.match(codeDebugParser.RIGHT_SQUARE_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PARENTHESIS(self):
            return self.getToken(codeDebugParser.LEFT_PARENTHESIS, 0)

        def RIGHT_PARENTHESIS(self):
            return self.getToken(codeDebugParser.RIGHT_PARENTHESIS, 0)

        def valueForInitialization(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(codeDebugParser.ValueForInitializationContext)
            else:
                return self.getTypedRuleContext(codeDebugParser.ValueForInitializationContext,i)


        def getRuleIndex(self):
            return codeDebugParser.RULE_initialValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitialValue" ):
                listener.enterInitialValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitialValue" ):
                listener.exitInitialValue(self)




    def initialValue(self):

        localctx = codeDebugParser.InitialValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_initialValue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(codeDebugParser.LEFT_PARENTHESIS)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << codeDebugParser.LEFT_SQUARE_BRACKET) | (1 << codeDebugParser.IDENTIFIER_UPPERCASE) | (1 << codeDebugParser.IDENTIFIER_LOWERCASE) | (1 << codeDebugParser.NUMBER))) != 0):
                self.state = 127
                self.valueForInitialization()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 133
            self.match(codeDebugParser.RIGHT_PARENTHESIS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueForInitializationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(codeDebugParser.IdentifierValueContext)
            else:
                return self.getTypedRuleContext(codeDebugParser.IdentifierValueContext,i)


        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(codeDebugParser.NUMBER)
            else:
                return self.getToken(codeDebugParser.NUMBER, i)

        def array(self):
            return self.getTypedRuleContext(codeDebugParser.ArrayContext,0)


        def getRuleIndex(self):
            return codeDebugParser.RULE_valueForInitialization

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValueForInitialization" ):
                listener.enterValueForInitialization(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValueForInitialization" ):
                listener.exitValueForInitialization(self)




    def valueForInitialization(self):

        localctx = codeDebugParser.ValueForInitializationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_valueForInitialization)
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [codeDebugParser.IDENTIFIER_UPPERCASE, codeDebugParser.IDENTIFIER_LOWERCASE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 135
                        self.identifierValue()

                    else:
                        raise NoViableAltException(self)
                    self.state = 138 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                pass
            elif token in [codeDebugParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 141 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 140
                        self.match(codeDebugParser.NUMBER)

                    else:
                        raise NoViableAltException(self)
                    self.state = 143 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

                pass
            elif token in [codeDebugParser.LEFT_SQUARE_BRACKET]:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.array()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_SQUARE_BRACKET(self):
            return self.getToken(codeDebugParser.LEFT_SQUARE_BRACKET, 0)

        def arrayValue(self):
            return self.getTypedRuleContext(codeDebugParser.ArrayValueContext,0)


        def RIGHT_SQUARE_BRACKET(self):
            return self.getToken(codeDebugParser.RIGHT_SQUARE_BRACKET, 0)

        def getRuleIndex(self):
            return codeDebugParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)




    def array(self):

        localctx = codeDebugParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(codeDebugParser.LEFT_SQUARE_BRACKET)
            self.state = 149
            self.arrayValue()
            self.state = 150
            self.match(codeDebugParser.RIGHT_SQUARE_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(codeDebugParser.NUMBER)
            else:
                return self.getToken(codeDebugParser.NUMBER, i)

        def numberArray(self):
            return self.getTypedRuleContext(codeDebugParser.NumberArrayContext,0)


        def COMMA(self):
            return self.getToken(codeDebugParser.COMMA, 0)

        def getRuleIndex(self):
            return codeDebugParser.RULE_numberArray

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberArray" ):
                listener.enterNumberArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberArray" ):
                listener.exitNumberArray(self)



    def numberArray(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = codeDebugParser.NumberArrayContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_numberArray, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 153
                    self.match(codeDebugParser.NUMBER)
